Fixing alignment for mobile

--- a/styles.css
+++ b/styles.css
@@ -474,7 +474,8 @@ a {
     }
     
     .box {
-        width: 50%;
+        /* width: 50%; */
+        
         padding: 50px;
         display: flex;
         justify-content: center;
